Bug 282444 - Kexi does not prevent renaming objects to invalid identifiers
Summary: Kexi does not prevent renaming objects to invalid identifiers
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.4 beta2 (Calligra 2.4 beta2)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-20 22:24 UTC by Jarosław Staniek
Modified: 2011-09-21 23:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4 beta2 (Calligra 2.4 beta2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2011-09-20 22:24:16 UTC
Kexi does not prevent renaming objects to invalid identifiers in the project navigator. In 1.x series it was prevented.
Comment 1 Jarosław Staniek 2011-09-20 22:43:08 UTC
Git commit c0526fae3a41548bc9ae68c410fdbf2724438c4b by Jaroslaw Staniek.
Committed on 21/09/2011 at 00:26.
Pushed by staniek into branch 'master'.

Prevent renaming objects to invalid identifiers in Project Navigator

BUG:282444

M  +5    -0    kexi/doc/dev/CHANGELOG-Kexi-js
M  +1    -0    kexi/widget/CMakeLists.txt
A  +48   -0    kexi/widget/navigator/KexiProjectItemDelegate.cpp     [License: LGPL (v2+)]
A  +45   -0    kexi/widget/navigator/KexiProjectItemDelegate.h     [License: LGPL (v2)]
M  +6    -3    kexi/widget/navigator/KexiProjectNavigator.cpp

http://commits.kde.org/calligra/c0526fae3a41548bc9ae68c410fdbf2724438c4b