Prevent renaming objects to invalid identifiers in Project Navigator

BUG:282444